New variable for project user database password

--- a/roles/web/templates/config.php.j2
+++ b/roles/web/templates/config.php.j2
@@ -4,4 +4,4 @@
 $Configuration['Database']['Name'] = '{{ db_name }}';
 $Configuration['Database']['Host'] = '172.22.22.33';
 $Configuration['Database']['User'] = '{{ project_user }}';
-$Configuration['Database']['Password'] = '{{ mysql_root_pw }}';
+$Configuration['Database']['Password'] = '{{ project_user_db_pw }}';
