Added ansible_managed tag to templates

--- a/roles/web/templates/config.php.j2
+++ b/roles/web/templates/config.php.j2
@@ -1,5 +1,7 @@
 <?php if (!defined('APPLICATION')) exit();
 
+// {{ ansible_managed }}
+
 // Database
 $Configuration['Database']['Name'] = '{{ db_name }}';
 $Configuration['Database']['Host'] = '172.22.22.33';
