--- a/roles/web/templates/config.php.j2
+++ b/roles/web/templates/config.php.j2
@@ -4,6 +4,6 @@
 
 // Database
 $Configuration['Database']['Name'] = '{{ db_name }}';
-$Configuration['Database']['Host'] = '172.22.22.33';
+$Configuration['Database']['Host'] = '{{ db_host }}';
 $Configuration['Database']['User'] = '{{ project_user }}';
 $Configuration['Database']['Password'] = '{{ project_user_db_pw }}';
