--- a/roles/web/templates/config.php.j2
+++ b/roles/web/templates/config.php.j2
@@ -6,4 +6,4 @@
 $Configuration['Database']['Name'] = '{{ db_name }}';
 $Configuration['Database']['Host'] = '{{ db_host }}';
 $Configuration['Database']['User'] = '{{ project_user }}';
-$Configuration['Database']['Password'] = '{{ project_user_db_pw }}';
+$Configuration['Database']['Password'] = '{{ db_password }}';
