Redefine database user

--- a/roles/deploy/templates/config.php.j2
+++ b/roles/deploy/templates/config.php.j2
@@ -5,5 +5,5 @@
 // Database
 $Configuration['Database']['Name'] = '{{ db_name }}';
 $Configuration['Database']['Host'] = '{{ db_host }}';
-$Configuration['Database']['User'] = '{{ project_user }}';
+$Configuration['Database']['User'] = '{{ db_user }}';
 $Configuration['Database']['Password'] = '{{ db_password }}';
