Removed config template

--- a/roles/web/templates/config.php.j2
+++ b/roles/web/templates/config.php.j2
@@ -1,5 +1,6 @@
 <?php if (!defined('APPLICATION')) exit();
 
+// This template is no longer used. It was applied in roles/web/tasks/vanilla.yml:49 but has since been deprecated.
 // {{ ansible_managed }}
 
 // Database
